implementation of filter changed

--- a/src/components/VisibilityFilter.css
+++ b/src/components/VisibilityFilter.css
@@ -1,8 +1,8 @@
-.main {
+.radio {
   display: flex;
   justify-content: space-between;
 }
 
-.list-item {
+.radio-item {
     margin-right: 30px;
 }
